--- a/app/src/main/res/layout/verification_fragment.xml
+++ b/app/src/main/res/layout/verification_fragment.xml
@@ -36,7 +36,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingVertical="4dp"
-            android:text="@string/resend_password" />
+            android:text="@string/resend_password"
+            android:visibility="gone" />
     </LinearLayout>
 
     <com.google.android.material.button.MaterialButton
