--- a/app/src/main/res/layout/camera_fragment.xml
+++ b/app/src/main/res/layout/camera_fragment.xml
@@ -1,6 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="16dp">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/takePhotoBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:text="@string/take_photo"
+        app:icon="@drawable/outline_camera_alt_24" />
+
+    <ImageView
+        android:id="@+id/photoPreview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/analyseBtn"
+        android:layout_below="@id/takePhotoBtn"
+        android:layout_centerHorizontal="true"
+        android:layout_marginVertical="16dp"
+        android:contentDescription="@string/photo_preview" />
+
+
+    <TextView
+        android:id="@+id/noPhoto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/analyseBtn"
+        android:layout_below="@id/takePhotoBtn"
+        android:layout_centerHorizontal="true"
+        android:layout_marginVertical="16dp"
+        android:gravity="center"
+        android:text="@string/no_photo" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/analyseBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:text="@string/analyse"
+        app:icon="@drawable/round_send_24" />
+
+</RelativeLayout>
